# makers

./: .cursorignore  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: logging_config.py  settings.py
src/agentic/: __init__.py
src/agentic/agents/: __init__.py  agent.py  constants.py  prompts.py
src/agentic/tools/: __init__.py  arxiv.py  document_analysis.py  knowledge_base.py  registry.py
src/agentic/workflow/: __init__.py  __main__.py  graph.py  routing.py  runner.py
src/agentic/workflow/nodes/: agent_node.py  summary_node.py  tool_node.py
src/agents/: agent_architectures.py
src/agents/crewai_teams/: document_analysis_crew.py
src/api/: main.py  schemas.py
src/application/: __init__.py
src/application/api/: main.py  schemas.py
src/application/cli/: explore_chroma.py  run_evaluation.py  run_ingestion.py  run_makers.py
src/core/: __init__.py  constants.py  state.py
src/core/agents/: agent.py  prompts.py
src/core/tools/: __init__.py  arxiv.py  knowledge_base.py
src/core/workflow/: graph.py  runner.py
src/core/workflow/nodes/: agent_node.py  summary_node.py  tool_node.py
src/graph/: checkpointer.py  main_workflow.py
src/scripts/: run_makers.py
src/services/: __init__.py  llm.py
src/services/evaluation/: __init__.py  metrics_logger.py  rag_evaluator.py  synthesis_evaluator.py
src/services/ingestion/: __init__.py  arxiv_downloader.py  document_parser.py  embedder.py  preprocessor.py
src/services/storage/: __init__.py  checkpointer.py  mongodb.py  vector_store.py
