[tool.poetry]
name = "makers"
version = "0.1.0"
description = "MAKERS: Multi Agent Knowledge Exploration & Retrieval System"
authors = ["Estèphe ARNAUD"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.11"

# --- Configuration and Utilities ---
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"

# --- Data Processing and PDF ---
arxiv = "^2.1.0"
pymupdf = "^1.24.1" # For PyMuPDF (PDF parsing)
pandas = "^2.2.2"
numpy = "^1.26.4"

# --- LLMs, Embeddings, Tokenization ---
openai = "^1.28.0" # OpenAI Python client
tiktoken = "^0.7.0" # OpenAI tokenizer

# --- LangChain Family ---
langchain-core = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
langchain = "^0.3.0"
langchain-ollama = "^0.2.0"
langchain-huggingface = "^0.1.0"
langchain-groq = "^0.2.0"
langchain-google-genai = "^2.0.0"
langgraph = "^0.2.0"

# --- LlamaIndex Family ---
llama-index = "^0.10.42"
llama-index-core = "^0.10.42"
llama-index-vector-stores-chroma = "^0.1.7"
llama-index-embeddings-openai = "^0.1.10"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-embeddings-ollama = "^0.1.3"

# --- Vector Database ---
chromadb = "^0.5.0"

# --- Evaluation and Metrics Logging ---
wandb = "^0.17.0" # Weights & Biases

# --- Agent Frameworks ---
# Note: crewai removed - document_analysis.py tool is disabled for security reasons
# If needed in the future, use a version compatible with chromadb 0.5.x

# --- Web API (FastAPI) ---
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
langgraph-checkpoint-sqlite = "^2.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
notebook = "^7.2.0"
jupytext = "^1.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 